fix: text alignment breakpoint for landing stats
- also remove old console.log

--- a/src/containers/HomeHeader/HomeHeader.module.scss
+++ b/src/containers/HomeHeader/HomeHeader.module.scss
@@ -32,8 +32,11 @@
 }
 
 .stats {
-    text-align: right;
     color: var(--c-text);
+    text-align: left;
+    @include for-size($default-bigger-screen-breakpoint) {
+        text-align: right;
+    }
 }
 
 .stats label {
